refactor: move car to robot

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>self-driving car - no libraries</title>
+	<title>Autonomous Mobile Robot - no libraries</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 	<script src="util.js"></script>
 	<script src="road.js"></script>
 	<script src="controls.js"></script>
-	<script src="car.js"></script>
+	<script src="robot.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
